--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Management System</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <title>Business Management System v2.0</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); min-height: 100vh; }
@@ -183,8 +186,9 @@
     <!-- Home -->
     <div id="home-page" class="home-page">
         <div class="home-content">
-            <h1>💼 Business Manager</h1>
+            <h1>💼 A&K Creations</h1>
             <p>Complete Inventory & Sales System</p>
+            <p style="font-size: 0.8em; opacity: 0.7; margin-top: 10px;">v2.0 - Updated</p>
             <button class="home-btn" onclick="showCatalog()">View Products</button>
             <br>
             <button class="home-btn" onclick="showLogin()" style="background: rgba(255,255,255,0.2); color: white;">🔐 Staff Login</button>
